--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
+# Datasource
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
 
+# Data initialization
+spring.jpa.hibernate.ddl-auto=none
+spring.liquibase.enabled=true
+spring.liquibase.change-log=/db/changelog/master.xml
+
+# Logging
+logging.level.root=info
+spring.jpa.show-sql=true
+
+# Server
 server.port=8080
