iron out some liquibase quirks and some cleanup

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -3,6 +3,12 @@ username=root
 password=1234
 driver=org.postgresql.Driver
 
+# This changeLogFile location is the one used by liquibase-maven-plugin. It should
+# remain the same as spring.liquibase.change-log in application.properties, or else migrations will not run
+# if some of them run via liquibase:update and some of them run via application start
+changeLogFile=db/changelog/master.xml
+
+# This is where a current image of the database is saved with liquibase:generateChangeLog
 outputChangeLogFile=src/main/resources/db/changelog/dbchangelog.xml
 
 # for diffing with hibernate entities
