--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>liquibase-hibernate6</artifactId>
             <version>${liquibase-hibernate6.version}</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
