--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Data initialization
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.enabled=true
-spring.liquibase.change-log=/db/changelog/master.xml
+spring.liquibase.change-log=classpath:db/changelog/master.xml
 
 # Logging
 logging.level.root=info
