--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/master.xml
 
+# OpenAPI
+springdoc.api-docs.path=/api-docs
+
 # Logging
 logging.level.root=info
 spring.jpa.show-sql=true
