--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/matchOddsDB
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
