--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
-url=jdbc:postgresql://localhost:5432/postgres
+url=jdbc:postgresql://localhost:5432/matchOddsDB
 username=root
 password=1234
 driver=org.postgresql.Driver
